# singlecell-kaggle

./: .gitignore  .python-version  2021 Competition Notes.md  EDA.ipynb  README.md  cite-seq_EDA.ipynb  data_problem_fix.ipynb  metadata_EDA.ipynb  pyproject.toml  requirements.in  requirements.txt  test.sh  utils.py
code/: Last Year Multi RBF.ipynb  Last Year RNA->Prot Test.ipynb  cite-seq_EDA.ipynb  jax-test.ipynb  last_year_rbf_prefect.ipynb  metadata_EDA.ipynb  multi-EDA-sparse.ipynb  multi-sparse_EDA.ipynb  rbf_pca_normed_input_output.py  submit_to_kaggle.ipynb  utils.py  xgboost_pca_normed_input_output.py
data/: data_readme.md
papers_and_notes/: 2021 Competition Notes.md  Journal.md  notes.md
scripts/: prefect_setup.sh  saturn_cloud_setup.sh  update_requirements.sh
