[tool.poetry]
name = "singlecell-kaggle"
version = "0.1.0"
description = ""
authors = ["Luke Schiefelbein <luke.schiefelbein@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
h5py = "^3.7.0"
natsort = "^8.2.0"
numpy = "^1.23.4"
packaging = "^21.3"
pandas = "^1.5.0"
scipy = "^1.9.2"
sklearn = "^0.0"
tables = "^3.7.0"
ipykernel = "^6.16.0"
mlflow = "^1.29.0"
pyarrow = "^9.0.0"
kaggle = "^1.5.12"
prefect = "^2.6.5"

[tool.poetry.dev-dependencies]
pandas-stubs = "^1.5.0"
mypy = "^0.982"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
